--- a/index.html
+++ b/index.html
@@ -372,7 +372,8 @@
     <!-- 导航栏 -->
     <nav class="navbar">
         <div class="logo">
-            <img src="https://www.helloimg.com/i/2025/06/29/68612a96d2331.png" alt="CQHI Logo" style="height: 3rem; vertical-align: middle; margin-right: 0.5rem;">
+            <img src="https://www.helloimg.com/i/2025/06/29/68612a96d2331.png" alt="CQHI Logo"
+                style="height: 3rem; vertical-align: middle; margin-right: 0.5rem;">
             CQHI
         </div>
         <ul class="nav-links">
@@ -412,8 +413,12 @@
         </div>
 
         <h2>制作组新闻</h2>
+        <p>2025.7.6 [CQHI]政委</p>
+        <img src="https://www.helloimg.com/i/2025/07/06/686a11a88b181.png" alt="爆炸了"
+            style="width: 100%; max-height: 250px; object-fit: cover; border-radius: 8px 8px 0 0;">
+        <p>期末考式成绩出来了要炸了，不知道《永恒硝烟——零》什么时候才能恢复更新（悲）</p>
         <p>2025.6.29 [CQHI]中央通讯社</p>
-        <img src="https://www.helloimg.com/i/2025/06/29/68612a9713fd3.png" alt="《永恒硝烟——零》"
+        <img src="https://www.helloimg.com/i/2025/06/29/68612a9713fd3.png" alt="官网上线了上线了上线了，重要的事情说三遍！"
             style="width: 100%; max-height: 250px; object-fit: cover; border-radius: 8px 8px 0 0;">
         <p>官网上线了上线了上线了，重要的事情说三遍！</p>
 
